# api/docs/yorkie/v1/yorkie.openapi.yaml
@@ -58,6 +58,18 @@ paths:
           $ref: '#/components/responses/connect.error'
       tags:
       - yorkie.v1.YorkieService
+  /yorkie.v1.YorkieService/CreateRevision:
+    post:
+      description: ""
+      requestBody:
+        $ref: '#/components/requestBodies/yorkie.v1.YorkieService.CreateRevision.yorkie.v1.CreateRevisionRequest'
+      responses:
+        "200":
+          $ref: '#/components/responses/yorkie.v1.YorkieService.CreateRevision.yorkie.v1.CreateRevisionResponse'
+        default:
+          $ref: '#/components/responses/connect.error'
+      tags:
+      - yorkie.v1.YorkieService
   /yorkie.v1.YorkieService/DeactivateClient:
     post:
       description: ""
@@ -94,6 +106,18 @@ paths:
           $ref: '#/components/responses/connect.error'
       tags:
       - yorkie.v1.YorkieService
+  /yorkie.v1.YorkieService/ListRevisions:
+    post:
+      description: ""
+      requestBody:
+        $ref: '#/components/requestBodies/yorkie.v1.YorkieService.ListRevisions.yorkie.v1.ListRevisionsRequest'
+      responses:
+        "200":
+          $ref: '#/components/responses/yorkie.v1.YorkieService.ListRevisions.yorkie.v1.ListRevisionsResponse'
+        default:
+          $ref: '#/components/responses/connect.error'
+      tags:
+      - yorkie.v1.YorkieService
   /yorkie.v1.YorkieService/PushPullChanges:
     post:
       description: ""
@@ -126,6 +150,18 @@ paths:
       responses:
         "200":
           $ref: '#/components/responses/yorkie.v1.YorkieService.RemoveDocument.yorkie.v1.RemoveDocumentResponse'
+        default:
+          $ref: '#/components/responses/connect.error'
+      tags:
+      - yorkie.v1.YorkieService
+  /yorkie.v1.YorkieService/RestoreRevision:
+    post:
+      description: ""
+      requestBody:
+        $ref: '#/components/requestBodies/yorkie.v1.YorkieService.RestoreRevision.yorkie.v1.RestoreRevisionRequest'
+      responses:
+        "200":
+          $ref: '#/components/responses/yorkie.v1.YorkieService.RestoreRevision.yorkie.v1.RestoreRevisionResponse'
         default:
           $ref: '#/components/responses/connect.error'
       tags:
@@ -192,6 +228,15 @@ components:
           schema:
             $ref: '#/components/schemas/yorkie.v1.BroadcastRequest'
       required: true
+    yorkie.v1.YorkieService.CreateRevision.yorkie.v1.CreateRevisionRequest:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/yorkie.v1.CreateRevisionRequest'
+        application/proto:
+          schema:
+            $ref: '#/components/schemas/yorkie.v1.CreateRevisionRequest'
+      required: true
     yorkie.v1.YorkieService.DeactivateClient.yorkie.v1.DeactivateClientRequest:
       content:
         application/json:
@@ -219,6 +264,15 @@ components:
           schema:
             $ref: '#/components/schemas/yorkie.v1.DetachDocumentRequest'
       required: true
+    yorkie.v1.YorkieService.ListRevisions.yorkie.v1.ListRevisionsRequest:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/yorkie.v1.ListRevisionsRequest'
+        application/proto:
+          schema:
+            $ref: '#/components/schemas/yorkie.v1.ListRevisionsRequest'
+      required: true
     yorkie.v1.YorkieService.PushPullChanges.yorkie.v1.PushPullChangesRequest:
       content:
         application/json:
@@ -245,6 +299,15 @@ components:
         application/proto:
           schema:
             $ref: '#/components/schemas/yorkie.v1.RemoveDocumentRequest'
+      required: true
+    yorkie.v1.YorkieService.RestoreRevision.yorkie.v1.RestoreRevisionRequest:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/yorkie.v1.RestoreRevisionRequest'
+        application/proto:
+          schema:
+            $ref: '#/components/schemas/yorkie.v1.RestoreRevisionRequest'
       required: true
     yorkie.v1.YorkieService.WatchChannel.yorkie.v1.WatchChannelRequest:
       content: {}
@@ -298,6 +361,15 @@ components:
           schema:
             $ref: '#/components/schemas/yorkie.v1.BroadcastResponse'
       description: ""
+    yorkie.v1.YorkieService.CreateRevision.yorkie.v1.CreateRevisionResponse:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/yorkie.v1.CreateRevisionResponse'
+        application/proto:
+          schema:
+            $ref: '#/components/schemas/yorkie.v1.CreateRevisionResponse'
+      description: ""
     yorkie.v1.YorkieService.DeactivateClient.yorkie.v1.DeactivateClientResponse:
       content:
         application/json:
@@ -325,6 +397,15 @@ components:
           schema:
             $ref: '#/components/schemas/yorkie.v1.DetachDocumentResponse'
       description: ""
+    yorkie.v1.YorkieService.ListRevisions.yorkie.v1.ListRevisionsResponse:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/yorkie.v1.ListRevisionsResponse'
+        application/proto:
+          schema:
+            $ref: '#/components/schemas/yorkie.v1.ListRevisionsResponse'
+      description: ""
     yorkie.v1.YorkieService.PushPullChanges.yorkie.v1.PushPullChangesResponse:
       content:
         application/json:
@@ -351,6 +432,15 @@ components:
         application/proto:
           schema:
             $ref: '#/components/schemas/yorkie.v1.RemoveDocumentResponse'
+      description: ""
+    yorkie.v1.YorkieService.RestoreRevision.yorkie.v1.RestoreRevisionResponse:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/yorkie.v1.RestoreRevisionResponse'
+        application/proto:
+          schema:
+            $ref: '#/components/schemas/yorkie.v1.RestoreRevisionResponse'
       description: ""
     yorkie.v1.YorkieService.WatchChannel.yorkie.v1.WatchChannelResponse:
       description: ""
@@ -385,6 +475,100 @@ components:
           type: string
       title: Connect Error
       type: object
+    google.protobuf.Timestamp:
+      additionalProperties: false
+      description: |-
+        A Timestamp represents a point in time independent of any time zone or local
+         calendar, encoded as a count of seconds and fractions of seconds at
+         nanosecond resolution. The count is relative to an epoch at UTC midnight on
+         January 1, 1970, in the proleptic Gregorian calendar which extends the
+         Gregorian calendar backwards to year one.
+
+         All minutes are 60 seconds long. Leap seconds are "smeared" so that no leap
+         second table is needed for interpretation, using a [24-hour linear
+         smear](https://developers.google.com/time/smear).
+
+         The range is from 0001-01-01T00:00:00Z to 9999-12-31T23:59:59.999999999Z. By
+         restricting to that range, we ensure that we can convert to and from [RFC
+         3339](https://www.ietf.org/rfc/rfc3339.txt) date strings.
+
+         # Examples
+
+         Example 1: Compute Timestamp from POSIX `time()`.
+
+             Timestamp timestamp;
+             timestamp.set_seconds(time(NULL));
+             timestamp.set_nanos(0);
+
+         Example 2: Compute Timestamp from POSIX `gettimeofday()`.
+
+             struct timeval tv;
+             gettimeofday(&tv, NULL);
+
+             Timestamp timestamp;
+             timestamp.set_seconds(tv.tv_sec);
+             timestamp.set_nanos(tv.tv_usec * 1000);
+
+         Example 3: Compute Timestamp from Win32 `GetSystemTimeAsFileTime()`.
+
+             FILETIME ft;
+             GetSystemTimeAsFileTime(&ft);
+             UINT64 ticks = (((UINT64)ft.dwHighDateTime) << 32) | ft.dwLowDateTime;
+
+             // A Windows tick is 100 nanoseconds. Windows epoch 1601-01-01T00:00:00Z
+             // is 11644473600 seconds before Unix epoch 1970-01-01T00:00:00Z.
+             Timestamp timestamp;
+             timestamp.set_seconds((INT64) ((ticks / 10000000) - 11644473600LL));
+             timestamp.set_nanos((INT32) ((ticks % 10000000) * 100));
+
+         Example 4: Compute Timestamp from Java `System.currentTimeMillis()`.
+
+             long millis = System.currentTimeMillis();
+
+             Timestamp timestamp = Timestamp.newBuilder().setSeconds(millis / 1000)
+                 .setNanos((int) ((millis % 1000) * 1000000)).build();
+
+         Example 5: Compute Timestamp from Java `Instant.now()`.
+
+             Instant now = Instant.now();
+
+             Timestamp timestamp =
+                 Timestamp.newBuilder().setSeconds(now.getEpochSecond())
+                     .setNanos(now.getNano()).build();
+
+         Example 6: Compute Timestamp from current time in Python.
+
+             timestamp = Timestamp()
+             timestamp.GetCurrentTime()
+
+         # JSON Mapping
+
+         In JSON format, the Timestamp type is encoded as a string in the
+         [RFC 3339](https://www.ietf.org/rfc/rfc3339.txt) format. That is, the
+         format is "{year}-{month}-{day}T{hour}:{min}:{sec}[.{frac_sec}]Z"
+         where {year} is always expressed using four digits while {month}, {day},
+         {hour}, {min}, and {sec} are zero-padded to two digits each. The fractional
+         seconds, which can go up to 9 digits (i.e. up to 1 nanosecond resolution),
+         are optional. The "Z" suffix indicates the timezone ("UTC"); the timezone
+         is required. A proto3 JSON serializer should always use UTC (as indicated by
+         "Z") when printing the Timestamp type and a proto3 JSON parser should be
+         able to accept both UTC and other timezones (as indicated by an offset).
+
+         For example, "2017-01-15T01:30:15.01Z" encodes 15.01 seconds past
+         01:30 UTC on January 15, 2017.
+
+         In JavaScript, one can convert a Date object to this format using the
+         standard
+         [toISOString()](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date/toISOString)
+         method. In Python, a standard `datetime.datetime` object can be converted
+         to this format using
+         [`strftime`](https://docs.python.org/2/library/time.html#time.strftime) with
+         the time format spec '%Y-%m-%dT%H:%M:%S.%fZ'. Likewise, in Java, one can use
+         the Joda Time's [`ISODateTimeFormat.dateTime()`](
+         http://joda-time.sourceforge.net/apidocs/org/joda/time/format/ISODateTimeFormat.html#dateTime()
+         ) to obtain a formatter capable of generating timestamps in this format.
+      format: date-time
+      type: string
     yorkie.v1.ActivateClientRequest:
       additionalProperties: false
       description: ""
@@ -734,6 +918,44 @@ components:
           title: server_seq
       title: Checkpoint
       type: object
+    yorkie.v1.CreateRevisionRequest:
+      additionalProperties: false
+      description: ""
+      properties:
+        clientId:
+          additionalProperties: false
+          description: ""
+          title: client_id
+          type: string
+        description:
+          additionalProperties: false
+          description: ""
+          title: description
+          type: string
+        documentId:
+          additionalProperties: false
+          description: ""
+          title: document_id
+          type: string
+        label:
+          additionalProperties: false
+          description: ""
+          title: label
+          type: string
+      title: CreateRevisionRequest
+      type: object
+    yorkie.v1.CreateRevisionResponse:
+      additionalProperties: false
+      description: ""
+      properties:
+        revision:
+          $ref: '#/components/schemas/yorkie.v1.RevisionSummary'
+          additionalProperties: false
+          description: ""
+          title: revision
+          type: object
+      title: CreateRevisionResponse
+      type: object
     yorkie.v1.DeactivateClientRequest:
       additionalProperties: false
       description: ""
@@ -914,6 +1136,51 @@ components:
           title: value
           type: string
       title: JSONElementSimple
+      type: object
+    yorkie.v1.ListRevisionsRequest:
+      additionalProperties: false
+      description: ""
+      properties:
+        documentId:
+          additionalProperties: false
+          description: ""
+          title: document_id
+          type: string
+        isForward:
+          additionalProperties: false
+          description: ""
+          title: is_forward
+          type: boolean
+        offset:
+          additionalProperties: false
+          description: ""
+          title: offset
+          type: integer
+        pageSize:
+          additionalProperties: false
+          description: ""
+          title: page_size
+          type: integer
+        projectId:
+          additionalProperties: false
+          description: ""
+          title: project_id
+          type: string
+      title: ListRevisionsRequest
+      type: object
+    yorkie.v1.ListRevisionsResponse:
+      additionalProperties: false
+      description: ""
+      properties:
+        revisions:
+          additionalProperties: false
+          description: ""
+          items:
+            $ref: '#/components/schemas/yorkie.v1.RevisionSummary'
+            type: object
+          title: revisions
+          type: array
+      title: ListRevisionsResponse
       type: object
     yorkie.v1.NodeAttr:
       additionalProperties: false
@@ -1629,6 +1896,67 @@ components:
           title: change_pack
           type: object
       title: RemoveDocumentResponse
+      type: object
+    yorkie.v1.RestoreRevisionRequest:
+      additionalProperties: false
+      description: ""
+      properties:
+        clientId:
+          additionalProperties: false
+          description: ""
+          title: client_id
+          type: string
+        revisionId:
+          additionalProperties: false
+          description: ""
+          title: revision_id
+          type: string
+      title: RestoreRevisionRequest
+      type: object
+    yorkie.v1.RestoreRevisionResponse:
+      additionalProperties: false
+      description: ""
+      title: RestoreRevisionResponse
+      type: object
+    yorkie.v1.RevisionSummary:
+      additionalProperties: false
+      description: ""
+      properties:
+        createdAt:
+          $ref: '#/components/schemas/google.protobuf.Timestamp'
+          additionalProperties: false
+          description: ""
+          title: created_at
+          type: object
+        description:
+          additionalProperties: false
+          description: ""
+          title: description
+          type: string
+        id:
+          additionalProperties: false
+          description: ""
+          title: id
+          type: string
+        label:
+          additionalProperties: false
+          description: ""
+          title: label
+          type: string
+        seq:
+          additionalProperties: false
+          description: ""
+          oneOf:
+          - type: string
+          - type: number
+          title: seq
+        snapshot:
+          additionalProperties: false
+          description: ""
+          format: byte
+          title: snapshot
+          type: string
+      title: RevisionSummary
       type: object
     yorkie.v1.Rule:
       additionalProperties: false
